Fix content background on mobile

--- a/assets/stylesheets/components/_mobile.scss
+++ b/assets/stylesheets/components/_mobile.scss
@@ -4,6 +4,7 @@
 
 ._mobile {
   font-size: 100%;
+  background: $contentBackground;
 
   // Layout
 
